Attempt at spacing the modal correctly on Brave Android

--- a/components/ModalElement/modal-element.css
+++ b/components/ModalElement/modal-element.css
@@ -116,6 +116,9 @@ hr {
 }
 
 @media (hover: none) and (pointer: coarse) {
+  .modal-dialog {
+    max-height: 70vh;
+  }
   .modal-header-and-body {
     transform: translateY(1.5rem);
   }
